   cwd attributes became properties.  The previous bug consisting in re-setting
   the root from the ftp handler after user login has been fixed to ease the
   development of subclasses.

 * Issue 134: enabled TCP_NODELAY socket option for the FTP command channels
   resulting in pyftpdlib being twice faster.

 * Issue 135: Python 2.3 support has been removed.

Bugfixes:

 * Issue #120: an ActiveDTP() instance is not garbage collected in case a
   client issuing PORT disconnects before establishing the data connection.

 * Issue #122: a wrong variable name was used in AbstractedFS.validpath method.

 * Issue #123: PORT command doesn't bind to correct address in case an alias
   is created for the local network interface.

Major API changes since 0.5.2

 * removed support for Python 2.3.

 * all classes are now new-style classes.

 * AbstractedFS class:
   * __init__ now accepts two arguments: root and cmd_channel.
   * root and cwd attributes are now read-only properties.
   * 3 new methods have been added: 
     - get_user_by_uid()
     - get_group_by_gid()
     - readlink()

 * FTPHandler class:
   * new class attributes:
     - use_gmt_times
     - tcp_no_delay
     - masquerade_address_map
   * new methods:
     - on_incomplete_file_sent()
     - on_incomplete_file_received()
     - on_login()
   * proto_cmds class attribute has been added.  The FTPHandler class  no longer 
     relies on "ftpserver.proto_cmds" global dictionary but on
     "ftpserver.FTPHandler.proto_cmds" instead.

 * Added a new package in pyftpdlib namespace: "contrib". Modules (and classes)
   defined here:
   - pyftpdlib.contrib.handlers.py (TLS_FTPHandler)
   - pyftpdlib.contrib.authorizers.py (UnixAuthorizer, WindowsAuthorizer)

Minor API changes since 0.5.2

 * FTPHandler renamed objects:
   data_server -> _dtp_acceptor
   current_type -> _current_type
   restart_position -> _restart_position
   quit_pending -> _quit_pending
   af -> _af
   on_dtp_connection -> _on_dtp_connection